[gd_scene load_steps=11 format=3 uid="uid://bi6iblpamn3jh"]

[ext_resource type="Texture2D" uid="uid://dgiqeqr1gpnil" path="res://Images/GreenTile.png" id="1_rmwim"]
[ext_resource type="Texture2D" uid="uid://b2a3mrh6b8pk0" path="res://Images/GreyTile.png" id="2_plwf8"]
[ext_resource type="Texture2D" uid="uid://biqe5aupv31ok" path="res://Images/TransTile.png" id="3_d634n"]
[ext_resource type="Script" path="res://Levels/NotePlacement.gd" id="3_nna42"]
[ext_resource type="AudioStream" uid="uid://d2ipfua8eqyig" path="res://Sounds/BassSynth.wav" id="5_706bb"]
[ext_resource type="Script" path="res://Scripts/SongPlayer.gd" id="6_ckigh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xga8r"]
texture = ExtResource("2_plwf8")
texture_region_size = Vector2i(60, 60)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7ruxy"]
texture = ExtResource("1_rmwim")
texture_region_size = Vector2i(60, 60)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7w702"]
texture = ExtResource("3_d634n")
texture_region_size = Vector2i(60, 60)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ab4o1"]
tile_size = Vector2i(60, 60)
sources/0 = SubResource("TileSetAtlasSource_xga8r")
sources/1 = SubResource("TileSetAtlasSource_7ruxy")
sources/2 = SubResource("TileSetAtlasSource_7w702")

[node name="Main" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ab4o1")
cell_quadrant_size = 60
format = 2
layer_0/name = "Background"
layer_1/name = "Placement"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Selection"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
script = ExtResource("3_nna42")

[node name="AudioPreview" type="AudioStreamPlayer" parent="TileMap"]
stream = ExtResource("5_706bb")

[node name="TextEdit" type="TextEdit" parent="TileMap"]
offset_left = 153.0
offset_top = 569.0
offset_right = 313.0
offset_bottom = 627.0
text = "1"

[node name="PlaySong" type="Button" parent="."]
offset_left = 22.0
offset_top = 563.0
offset_right = 114.0
offset_bottom = 632.0
text = "Play"

[node name="SongPlayer" type="Node" parent="."]
script = ExtResource("6_ckigh")
audio = ExtResource("5_706bb")

[node name="SongTimer" type="Timer" parent="SongPlayer"]
wait_time = 0.5

[node name="NotePlayer" type="AudioStreamPlayer" parent="SongPlayer"]
stream = ExtResource("5_706bb")

[connection signal="button_down" from="PlaySong" to="TileMap" method="_on_play_song_button_down"]
[connection signal="timeout" from="SongPlayer/SongTimer" to="SongPlayer" method="_on_song_timer_timeout"]
